@@ -6,9 +6,12 @@ use strict;
 use warnings FATAL => 'all';
 
 use Crypt::SSLeay;
+use File::Basename;
+use File::Path;
 use HTML::Entities;
 use LWP::ConnCache;
 use Log::Log4perl;
+use Storable;
 use WWW::Mechanize::GZip;
 
 my $LOGGER = Log::Log4perl->get_logger();
@@ -23,8 +26,12 @@ sub new {
 	$www->default_header('Accept-Language' => 'en');
 
 	my $self = {
+		dir => dirname($0) . '/.imdb',
 		www => $www,
 	};
+
+	my $dir = $params{'dir'};
+	$self->{'dir'} = $dir . '/.imdb' if defined $dir;
 
 	bless $self, $class;
 	return $self;
@@ -32,6 +39,18 @@ sub new {
 
 sub extract_imdb_data($$) { # {{{1
 	my ($self, $imdb_number) = @_;
+
+	my $dir = $self->{'dir'};
+	if ( ! -d $dir) {
+		File::Path::make_path($dir);
+	}
+
+	my $cache = $dir . '/' . $imdb_number . '.dat';
+	if ( -f $cache) {
+		my $imdb = Storable::lock_retrieve($cache);
+		return $imdb if defined $imdb;
+		$LOGGER->info('Could not retrieve data from store: ' . $cache . ' (=> must refetch)');
+	}
 
 	my $url = 'http://www.imdb.com/title/tt' . $imdb_number . '/';
 	$LOGGER->debug('url: ' . $url);
@@ -82,7 +101,9 @@ sub extract_imdb_data($$) { # {{{1
 	$LOGGER->warn('could not determine raters for ' . $url) unless $raters;
 
 	$LOGGER->debug("@genres");
-	return {id => $imdb_number, title => $title, year => $year, genres => \@genres, rating => $rating, raters => $raters, url => $url};
+	my $imdb = {id => $imdb_number, title => $title, year => $year, genres => \@genres, rating => $rating, raters => $raters, url => $url};
+	Storable::store($imdb, $cache);
+	return $imdb;
 } # }}}1
 
 1;
